Fixed bugs with space in mention and small layout issues

--- a/app/stylesheets/actwitty/refactor/aw_ppm/sketch/aw_sketch_js_stream_layout_view.sass
+++ b/app/stylesheets/actwitty/refactor/aw_ppm/sketch/aw_sketch_js_stream_layout_view.sass
@@ -416,6 +416,7 @@ body
   position: relative
   background: #333
   color: #fff
+  overflow: hidden
   /*-webkit-box-shadow: 0 4px 2px -2px black
   /*-moz-box-shadow: 0 4px 2px -2px black
   /*box-shadow: 0 4px 2px -2px black
@@ -449,6 +450,7 @@ body
   padding: 10px
   float: left
   margin-left: 5px
+  margin-top: -4px
   cursor: pointer
   font-size: 10px
   font-weight: bold
@@ -1135,11 +1137,12 @@ body
 
 #aw_streams_layout_interests_meta_data
   border: 0px solid blue
-  width: 500px
-  height: 50px
+  width: 550px
+  height: 90px
   position: absolute
   left: 10px
   top: 35px
+  overflow: hidden
   img
     vertical-align: middle
 
